--- a/style/components/header.css
+++ b/style/components/header.css
@@ -1,13 +1,16 @@
+body {
+	font-family: 'Roboto', sans-serif;
+}
 .header {
+	background-color: #fff;
 	width: 100%;
 	height: auto;
 	border-bottom: 1px solid #ccc;
-	font-family: 'Roboto', sans-serif;
 }
 .header-inner {
 	display: flex;
 	margin: 0 5%;
-	padding: 25px 0;
+	padding: 20px 0;
 	align-items: center;
 	justify-content: space-between;
 }
@@ -56,4 +59,51 @@
 }
 .none {
 	display: none;
+}
+
+/*headerInfo*/
+.headerInfo {
+	background-color: #fff;
+	width: 100%;
+	height: auto;
+	border-bottom: 1px solid #ccc;
+	font-family: 'Roboto', sans-serif;
+}
+.headerInfo-inner {
+	display: flex;
+	margin: 0 5%;
+	padding: 15px 0;
+	align-items: center;
+	justify-content: space-between;
+}
+.info-links {
+	display: flex;
+	align-items: center;
+}
+.info-links a {
+	text-decoration: none;
+	color: rgba(0, 0, 0, .5);
+	font-size: 14px;
+	font-weight: 600;
+	margin: 0 10px;
+}
+.sup-search {
+	display: flex;
+	align-items: center;
+}
+.sup-search__support {
+	margin-right: 30px;
+}
+.sup-search__search {
+	display: flex;
+	align-items: center;
+}
+.sup-search__search img{
+	margin-left: 10px;
+}
+.sup-search__search input{
+	border: none;
+	color: rgba(0, 0, 0, .5);
+	outline: none;
+	margin-left: 10px;
 }
