--- a/style/all.css
+++ b/style/all.css
@@ -3,4 +3,6 @@
 @import url('components/header-mobile.css') screen and (max-width: 769px);
 @import url('components/filter.css');
 @import url('components/filter-mobile.css') screen and (max-width: 769px);
+@import url('components/carusel.css');
+@import url('components/carusel-mobile.css') screen and (max-width: 769px);
 
