--- a/style/components/carusel.css
+++ b/style/components/carusel.css
@@ -18,7 +18,7 @@
 	background-color: #000;
 	color: #fff;
 	z-index: 2;
-	transition: .5s ease-out;
+	transition: 1s ease;
 }
 .carusel-inner__img1 {
 	width: 100%;
