--- a/style/components/header-mobile.css
+++ b/style/components/header-mobile.css
@@ -12,3 +12,25 @@
 .sup-search__support {
 	margin-right: 0px;
 }
+.mobile {
+	width: 40%;
+	height: 100vh;
+	display: flex;
+	position: absolute;
+	background-color: #000;
+	color: #fff;
+	left: -40%;
+	transition: .4s ease-out;
+	z-index: 10;
+}
+.menu-icon {
+	display: inline-block;
+}
+.backdrop {
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, .5);
+	z-index:5;
+}
