--- a/style/all.css
+++ b/style/all.css
@@ -3,8 +3,7 @@
 @import url('components/header-mobile.css') screen and (max-width: 769px);
 @import url('components/filter.css');
 @import url('components/filter-mobile.css') screen and (max-width: 769px);
-@import url('components/carusel.css');
-@import url('components/carusel-mobile.css') screen and (max-width: 769px);
+@import url('components/slider.css');
 @import url('components/content.css');
 @import url('components/content-mobile.css') screen and (max-width: 769px);
 
