--- a/style/components/slider.css
+++ b/style/components/slider.css
@@ -1,6 +1,6 @@
 .slider {
 	width: 100%;
-	height: 570px;
+	height: 550px;
 	position: relative;
 	overflow: hidden;
 }
@@ -54,3 +54,8 @@
 			.slider-ind__slide.active {
 				background-color: rgba(0,0,0,.8);
 			}
+@media screen and (max-width: 769px) {
+	.slider {
+		height: 350px;
+	}
+}
