--- a/style/components/header-mobile.css
+++ b/style/components/header-mobile.css
@@ -4,6 +4,11 @@
 .header-link a{
 	display: none;
 }
+.arrow {
+	width: 20px;
+	height: 20px;
+	border: 2px solid rgba(255,255,255,.6);
+}
 /*headerInfo*/
 
 .headerInfo-inner {
