--- a/public/style/components/header.css
+++ b/public/style/components/header.css
@@ -88,12 +88,13 @@ body {
 	display: flex;
 	align-items: center;
 }
-.info-links a {
+.info-links div {
 	text-decoration: none;
 	color: rgba(0, 0, 0, .5);
 	font-size: 14px;
 	font-weight: 600;
 	margin: 0 10px;
+	cursor: pointer;
 }
 .sup-search {
 	display: flex;
@@ -114,4 +115,20 @@ body {
 	color: rgba(0, 0, 0, .5);
 	outline: none;
 	margin-left: 10px;
+}
+
+/*newMenu*/
+
+.newmenu {
+	display: block;
+	width: 100%;
+	height: 550px;
+	position: absolute;
+	background-color: #fff;
+	z-index: 20;
+	transition: .4s ease-out;
+}
+
+.link:hover > #newmenu {
+	background-color: #000;
 }
