--- a/public/style/components/content.css
+++ b/public/style/components/content.css
@@ -1,31 +1,46 @@
 .content {
 	display: flex;
-	width: 94%;
+	width: 90%;
 	box-sizing: border-box;
-	margin: 0% 3%;
+	margin: 0% 5%;
 }
 .content-filter {
-	width: 30%;
+	width: 25%;
 	height: 500px;
-	background-color: #000;
-	color: #fff;
+	background-color: #fff;
+	color: #000;
 }
 .content-inner {
-	width: 100%;
-	height: 1000px;
+	box-sizing: border-box;
+	width: 75%;
 	margin-left: 30px;
-	background-color: #ccc;
 	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+}
+.content-inner__add {
+	display: flex;
+	flex-direction: row;
+	padding-bottom: 30px;
 }
 .content-cart {
 	background-color: #fff;
-	width: 300px;
-	height: 400px;
-	margin: 1% 1%;
+	width: 250px;
+	height: 350px;
+	margin: 0% 2%;
+	box-sizing: border-box;
+}
+
+.content-cart:hover {
+	transform: scale(1.1);
+	box-sizing: border-box;
 }
 .content-cart__img{
-	background-color: #000;
-	width: 300px;
+	background-color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center; 
+	width: 250px;
 	height: 250px;
 }
 .content-cart__title {
@@ -33,6 +48,12 @@
 	text-align: center;
 }
 .content-cart__subtitle {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 	padding: 20px 30px;
-	text-align: center;
+}
+.content-cart__basket {
+	width: 20px;
 }
