--- a/public/style/components/scrollbar.css
+++ b/public/style/components/scrollbar.css
@@ -1,16 +1,16 @@
 /* width */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background: rgba(0, 0, 0, .1); 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888; 
+    background: #F9A464; 
 }
 
 /* Handle on hover */
