added new slider item

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,19 @@
-
+	<!-- <section class = "slider">
+		<div class = "slider-inner" id = "slider">
+			<div class="slider-item" style = "background-image: url(../img/slide1.jpg)"></div>
+			<div class = "slider-item" style = "background-image: url(../img/slide2.jpg)"></div>
+			<div class = "slider-item" style = "background-image: url(../img/slide3.jpg)"></div>
+			<div class = "slider-item" style = "background-image: url(../img/slide4.jpg)"></div>			
+		</div>
+		<img src="img/caret-symbol.png" class = "arrow arrow--left" onclick = "backSlide()" id="prev">
+		<img src="img/caret-symbol.png" class = "arrow arrow--right" onclick = "nextSlide()" id="next">
+		<div class = "slider-ind">
+			<div class = "slider-ind__slide active" onclick="setSlidebyIndicator(0)"></div>
+			<div class = "slider-ind__slide" onclick="setSlidebyIndicator(1)"></div>
+			<div class = "slider-ind__slide" onclick="setSlidebyIndicator(2)"></div>
+			<div class = "slider-ind__slide" onclick="setSlidebyIndicator(3)"></div>
+		</div>
+	</section> -->
 	<!-- Filter -->
 	<section class="filter">
 		<div class="sort">
@@ -97,3 +112,4 @@
 		</div>
 		</div>
 	</section>
+	<!-- <script src="../js/slider.js"></script> -->
