--- a/public/style/components/slider.css
+++ b/public/style/components/slider.css
@@ -1,3 +1,6 @@
+.none {
+	display: none;
+}
 #slider {
 	width: auto;
 }
@@ -21,6 +24,58 @@
 			background-repeat: no-repeat;
 			background-position: center;
 		}
+			
+			.slider-item__inner {
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				justify-content: space-around;
+				color: #fff;
+			}
+
+			.slider-item__start {
+				padding-left: 9%;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: flex-start;
+			}
+
+			.slider-item__title {
+				font-size: 40px;
+				font-family: Arial, sans-serif;
+				padding-bottom: 20px;
+			}
+
+			.slider-item__subtitle {
+				width: 400px;
+				padding-bottom: 30px;
+			}
+
+			.slider-item__btn {
+				width: 150px;
+				height: 40px;
+				background-color: #2754EB;
+				border-radius: 20px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+			.slider-item__btn button{
+				background-color: transparent;
+				border:none;
+				color: #fff;
+				outline: none;
+				width: 100%;
+				height: 100%;
+				border-radius: 20px;
+			}
+			.slider-item__end {
+				padding-right: 200px;
+				margin-top: -50px;
+				/*transform: rotate3d(0, 1, 0, 180deg);*/
+			}
+
 		.arrow {
 			width: 15px;
 			height: 15px;
