--- a/public/views/home.html
+++ b/public/views/home.html
@@ -47,7 +47,7 @@
 		</div>
 	</section>
 	<!-- Content -->
-	<section class="content">
+	<section class="content animated fadeIn">
 		<div class="content-filter">a</div>
 		<div class="content-inner">
 		<div class="content-inner__add">
