--- a/public/style/all.css
+++ b/public/style/all.css
@@ -8,4 +8,5 @@
 @import url('components/content-mobile.css') screen and (max-width: 769px);
 @import url('components/scrollbar.css');
 @import url('components/checkbox.css');
+@import url('components/animate.min.css');
 
