--- a/public/style/components/slider.css
+++ b/public/style/components/slider.css
@@ -60,20 +60,21 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
+				transform-style: preserve-3d;
+				transform: rotateY(0deg);
+				perspective: 200px;
+				transition: 1s;
+				cursor: pointer;
 			}
-			.slider-item__btn button{
-				background-color: transparent;
-				border:none;
-				color: #fff;
-				outline: none;
-				width: 100%;
-				height: 100%;
-				border-radius: 20px;
+
+			.slider-item__btn:hover {
+				transform: rotateY(360deg);
 			}
 			.slider-item__end {
-				padding-right: 200px;
+				padding-left: 200px;
 				margin-top: -50px;
-				/*transform: rotate3d(0, 1, 0, 180deg);*/
+				transform-style: preserve-3d;
+				transform: rotateY(180deg);
 			}
 
 		.arrow {
