--- a/public/style/all.css
+++ b/public/style/all.css
@@ -9,4 +9,5 @@
 @import url('components/scrollbar.css');
 @import url('components/checkbox.css');
 @import url('components/animate.min.css');
+@import url('components/pogi.css');
 
