--- a/public/views/home.html
+++ b/public/views/home.html
@@ -112,4 +112,16 @@
 		</div>
 		</div>
 	</section>
+	<section class="pogi">
+		<div class="pogi__prev">
+			<
+		</div>
+		<div class="pogi__num">
+			<div>1</div>
+			<div>2</div>
+		</div>
+		<div class="pogi__next">
+			>
+		</div>
+	</section>
 	<!-- <script src="../js/slider.js"></script> -->
