--- a/public/style/all.css
+++ b/public/style/all.css
@@ -10,4 +10,5 @@
 @import url('components/checkbox.css');
 @import url('components/animate.min.css');
 @import url('components/pogi.css');
+@import url('components/scroll.css');
 
