--- a/public/views/home.html
+++ b/public/views/home.html
@@ -48,7 +48,9 @@
 	</section>
 	<!-- Content -->
 	<section class="content animated fadeIn">
-		<div class="content-filter">a</div>
+		<div class="content-filter">
+			span
+		</div>
 		<div class="content-inner">
 		<div class="content-inner__add">
 			<div class="content-cart">
