--- a/public/style/components/header-mobile.css
+++ b/public/style/components/header-mobile.css
@@ -19,23 +19,23 @@
 }
 .mobile {
 	width: 40%;
-	height: 100vh;
+	height: 100%;
 	display: flex;
-	position: absolute;
+	position: fixed;
 	background-color: #000;
 	color: #fff;
 	left: -40%;
 	transition: .4s ease-out;
-	z-index: 10;
+	z-index: 100;
 }
 .menu-icon {
 	display: inline-block;
 }
 .backdrop {
 	display: none;
-	position: absolute;
+	position: fixed;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background-color: rgba(0, 0, 0, .5);
-	z-index:5;
+	z-index:90;
 }
