footer and modal(sign in)

--- a/public/style/all.css
+++ b/public/style/all.css
@@ -11,4 +11,7 @@
 @import url('components/animate.min.css');
 @import url('components/pogi.css');
 @import url('components/scroll.css');
+@import url('components/preloader.css');
+@import url('components/footer.css');
+@import url('components/sign.css');
 
