--- a/public/style/components/header.css
+++ b/public/style/components/header.css
@@ -62,6 +62,7 @@ body {
 	margin-left: 10px;
 }
 .header-auth-sign {
+	cursor: pointer;
 	border: 1px solid #E7EBF2;
 	padding: 10px 20px;
 	border-radius: 20px;
@@ -76,6 +77,11 @@ body {
 }
 .backdrop {
 	display: none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .5);
+	z-index:90;
 }
 /*headerInfo*/
 .headerInfo {
