--- a/public/style/all.css
+++ b/public/style/all.css
@@ -14,4 +14,6 @@
 @import url('components/preloader.css');
 @import url('components/footer.css');
 @import url('components/sign.css');
+@import url('components/support.css');
+@import url('components/dashboard.css');
 
