--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,5 +1,6 @@
 <section class="admin">
-	<input type="text" placeholder="Login">
-	<input type="password">
+	<input type="text" placeholder="Login" required="">
+	<input type="password" required="">
 	<button class="btn__admin">Login</button>
 </section>
+<script src="../js/a.json"></script>
