--- a/public/style/components/sign.css
+++ b/public/style/components/sign.css
@@ -7,18 +7,52 @@
 	right: 0%;
 	top:9%;
 	background-color: #F6A263;
-	/*display: flex;
+	/*display: flex;*/
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;*/
+	align-items: center;
 }
-#sign-in__div {
+#sign-in button{
+	width: 80px;
+	background-color: #FAFFBD;
+	border-radius: 3px;
+	border:none;
+	outline: none;
+	cursor: pointer;
+	padding: 5px;
+}
+#sign-in input{
+	border-radius: 3px;
+	border:none;
+	outline: none;
+	cursor: pointer;
+	padding: 5px;
+}
+#signup {
 	width: 100%;
-	height: 100%;
+	height: 400px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	color: #000;
+	background-color: #fff;
+}
+#signup input {
+	width: 300px;
+	height: 30px;
+	margin: 5px 0;
+	outline: none;
+	padding-left: 10px;
+	border-radius: 5px;
+}
+#signup button {
+	width: 100px;
+	height: 30px;
+	background-color: #F6A263;
+	border-radius: 5px;
+	color: #fff;
+	border:none;
 }
 .up {
 	width: 30px;
